# pants_sample

./: pants.toml
src/proto/: BUILD
src/proto/test_proto/: test.proto
src/python/lib/: pyproject.toml  sample.py
src/python/lib/lib_a/: BUILD  array.py  log.py  pyproject.toml  sample.py
src/python/main/: BUILD  Dockerfile  main.py
src/python/main/main_a/: BUILD  Dockerfile  main.py
src/python/pantsbuild/complete_platforms/: BUILD  python-38-slim-buster.json
