[tool.poetry]
name = "libs"
version = "0.1.0"
description = ""
authors = ["ebiebix <ebi.h.821@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
absl-py = "^1.0.0"
tensorflow = "^2.0"
tensorflow-io = "^0.26.0"
numpy = "^1.22.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
