[tool.poetry]
name = "libs"
version = "0.1.0"
description = ""
authors = ["ebiebix <ebi.h.821@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
tensorflow = "2.9.2"
tensorflow-io = "0.26.0"
tensorflow-datasets = "4.6.0"
numpy = "^1.22.1"
torch = "1.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
